[tool.poetry]
name = "accrue-infrastructure"
version = "0.1.0"
description = ""
authors = ["Bhaskar Maddala <maddalab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi-aws = "^4.10.0"
pulumi = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
